--- a/.github/workflows/playwright.yml
+++ b/.github/workflows/playwright.yml
@@ -1,9 +1,15 @@
 name: Playwright Tests
 on:
   push:
-    branches: [ main, master ]
+    branches: [ main ]
   pull_request:
-    branches: [ main, master ]
+    branches: [ main ]
+  workflow_dispatch:
+    inputs:
+      base_url:
+        description: Base URL to run the tests against
+        default: "https://beta.kemkas.hu"
+
 jobs:
   test:
     timeout-minutes: 60
@@ -19,6 +25,8 @@ jobs:
       run: npx playwright install --with-deps
     - name: Run Playwright tests
       run: npx playwright test
+      env:
+        BASE_URL: ${{ inputs.base_url || 'https://beta.kemkas.hu' }}
     - uses: actions/upload-artifact@v4
       if: always()
       with:
