--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
   "license": "ISC",
   "devDependencies": {
     "@playwright/test": "^1.42.1",
-    "@types/node": "^20.11.30"
+    "@types/node": "^20.11.30",
+    "dotenv": "^16.4.5",
+    "pdf-lib": "^1.17.1"
   }
 }
